--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,11 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  auto_route: ^3.2.4
+  dartz: ^0.10.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
@@ -16,3 +19,6 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 
 flutter:
+
+executables:
+  helloworld:
