--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  args: ^2.3.0
   auto_route: ^3.2.4
   dartz: ^0.10.1
   flutter:
@@ -21,4 +22,4 @@ dev_dependencies:
 flutter:
 
 executables:
-  helloworld:
+  scalable:
