--- a/mason/domain/service/brick.yaml
+++ b/mason/domain/service/brick.yaml
@@ -19,8 +19,8 @@ environment:
 #  * an optional default value
 #  * an optional prompt phrase used when asking for the variable.
 vars:
+  project_name:
+    type: string
   name:
     type: string
-    description: Your name
-    default: Dash
-    prompt: What is your name?
+  
