add more templates

--- a/mason/mason.yaml
+++ b/mason/mason.yaml
@@ -5,3 +5,11 @@ bricks:
     path: ./application/bloc/
   service:
     path: ./domain/service/
+  entity:
+    path: ./domain/entity/
+  flow:
+    path: ./presentation/flow/
+  value_object:
+    path: ./domain/value_object/
+  dto:
+    path: ./infrastructure/dto/
