add minimal localization

--- a/mason/create/brick.yaml
+++ b/mason/create/brick.yaml
@@ -32,5 +32,5 @@ vars:
   description:
     type: string
     description: A short project description
-    default: A scalable App
+    default: A scalable App.
     prompt: What is the project description?
