--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,4 +3,4 @@ include: package:flutter_lints/flutter.yaml
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
 analyzer:
-  exclude: [mason/**]
+  exclude: [mason/application, mason/domain, mason/infrastructure, mason/presentation]
