--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,35 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  auto_route: ^3.2.4
+  # CORE
   dartz: ^0.10.1
+  bloc_concurrency: ^0.2.0
+  get_it: ^7.2.0
+  injectable: ^1.5.3
+  kt_dart: ^0.10.0
+  faker: ^2.0.0
+  freezed_annotation: ^1.1.0
+
+  # PRESENTATION
   flutter:
     sdk: flutter
+  auto_route: ^3.2.4
+  cupertino_icons: ^1.0.2
   flutter_bloc: ^8.0.1
+
+  # APPLICATION
+  bloc: ^8.0.3
+
+  # DOMAIN
+
+
+  # INFRASTRUCTURE
+  json_annotation: ^4.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  build_runner: ^2.1.10
 
 flutter:
