--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   macos_ui: ^0.12.4
   fluent_ui: ^3.11.0
+  yaru: ^0.2.5
 
   # APPLICATION
   bloc: ^8.0.3
