--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   # PRESENTATION
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   auto_route: ^3.2.4
   flutter_bloc: ^8.0.1
   # cupertino_icons: ^1.0.2
@@ -41,5 +43,3 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^1.0.0
   build_runner: ^2.1.10
-
-flutter:
